k8s_deploy/service_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: %%NAMESPACE%%
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: %%INGRESSCLASS%%
    cert-manager.io/issuer: letsencrypt-issuer
spec:
  tls:
  - hosts:
    - %%APPURL%%
    secretName: %%NAMESPACE%%-le-tls
  rules:
    - host: %%APPURL%%
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flask
              port:
                number: 80
...
